Week3 - Parser/Tut2/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from d:\Python\Principles of Programming Languages\Tmp\Trainning\Week3 - Parser\Tut2\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'float'", "'int'", "'return'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'{'", "'}'", "';'", "','", 
                     "'='", "'('", "')'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "FLOAT", "INT", "RETURN", "ID", "INTLIT", 
                      "FLOATLIT", "LB", "RB", "SM", "CM", "EQ", "LP", "RP", 
                      "ADD", "SUB", "MUL", "DIV", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_manydcl = 1
    RULE_vardcl = 2
    RULE_mc_type = 3
    RULE_idlist = 4
    RULE_funcdcl = 5
    RULE_paramdecl = 6
    RULE_paralist = 7
    RULE_body = 8
    RULE_bodylist = 9
    RULE_stmt = 10
    RULE_stmt_assign = 11
    RULE_stmt_call = 12
    RULE_stmt_return = 13
    RULE_exp = 14
    RULE_operands = 15
    RULE_subexp = 16

    ruleNames =  [ "program", "manydcl", "vardcl", "mc_type", "idlist", 
                   "funcdcl", "paramdecl", "paralist", "body", "bodylist", 
                   "stmt", "stmt_assign", "stmt_call", "stmt_return", "exp", 
                   "operands", "subexp" ]

    EOF = Token.EOF
    FLOAT=1
    INT=2
    RETURN=3
    ID=4
    INTLIT=5
    FLOATLIT=6
    LB=7
    RB=8
    SM=9
    CM=10
    EQ=11
    LP=12
    RP=13
    ADD=14
    SUB=15
    MUL=16
    DIV=17
    WS=18
    ERROR_CHAR=19
    UNCLOSE_STRING=20
    ILLEGAL_ESCAPE=21
    UNTERMINATED_COMMENT=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def manydcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ManydclContext)
            else:
                return self.getTypedRuleContext(BKITParser.ManydclContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FLOAT or _la==BKITParser.INT:
                self.state = 34
                self.manydcl()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardcl(self):
            return self.getTypedRuleContext(BKITParser.VardclContext,0)


        def funcdcl(self):
            return self.getTypedRuleContext(BKITParser.FuncdclContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_manydcl




    def manydcl(self):

        localctx = BKITParser.ManydclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydcl)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.vardcl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.funcdcl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mc_type(self):
            return self.getTypedRuleContext(BKITParser.Mc_typeContext,0)


        def idlist(self):
            return self.getTypedRuleContext(BKITParser.IdlistContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_vardcl




    def vardcl(self):

        localctx = BKITParser.VardclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.mc_type()
            self.state = 47
            self.idlist()
            self.state = 48
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mc_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKITParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_mc_type




    def mc_type(self):

        localctx = BKITParser.Mc_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mc_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not(_la==BKITParser.FLOAT or _la==BKITParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def idlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.IdlistContext)
            else:
                return self.getTypedRuleContext(BKITParser.IdlistContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_idlist




    def idlist(self):

        localctx = BKITParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(BKITParser.ID)
            self.state = 57
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self.match(BKITParser.CM)
                    self.state = 54
                    self.idlist() 
                self.state = 59
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mc_type(self):
            return self.getTypedRuleContext(BKITParser.Mc_typeContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def paramdecl(self):
            return self.getTypedRuleContext(BKITParser.ParamdeclContext,0)


        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdcl




    def funcdcl(self):

        localctx = BKITParser.FuncdclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.mc_type()
            self.state = 61
            self.match(BKITParser.ID)
            self.state = 62
            self.paramdecl()
            self.state = 63
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def paralist(self):
            return self.getTypedRuleContext(BKITParser.ParalistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramdecl




    def paramdecl(self):

        localctx = BKITParser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(BKITParser.LP)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.FLOAT or _la==BKITParser.INT:
                self.state = 66
                self.paralist()


            self.state = 69
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mc_type(self):
            return self.getTypedRuleContext(BKITParser.Mc_typeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def SM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.SM)
            else:
                return self.getToken(BKITParser.SM, i)

        def paralist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParalistContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParalistContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_paralist




    def paralist(self):

        localctx = BKITParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paralist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.mc_type()
            self.state = 72
            self.match(BKITParser.ID)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 73
                self.match(BKITParser.CM)
                self.state = 74
                self.match(BKITParser.ID)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 80
                    self.match(BKITParser.SM)
                    self.state = 81
                    self.paralist() 
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def bodylist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.BodylistContext)
            else:
                return self.getTypedRuleContext(BKITParser.BodylistContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_body




    def body(self):

        localctx = BKITParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(BKITParser.LB)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.FLOAT) | (1 << BKITParser.INT) | (1 << BKITParser.RETURN) | (1 << BKITParser.ID))) != 0):
                self.state = 88
                self.bodylist()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodylistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardcl(self):
            return self.getTypedRuleContext(BKITParser.VardclContext,0)


        def stmt(self):
            return self.getTypedRuleContext(BKITParser.StmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_bodylist




    def bodylist(self):

        localctx = BKITParser.BodylistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bodylist)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.FLOAT, BKITParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.vardcl()
                pass
            elif token in [BKITParser.RETURN, BKITParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_assign(self):
            return self.getTypedRuleContext(BKITParser.Stmt_assignContext,0)


        def stmt_call(self):
            return self.getTypedRuleContext(BKITParser.Stmt_callContext,0)


        def stmt_return(self):
            return self.getTypedRuleContext(BKITParser.Stmt_returnContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt




    def stmt(self):

        localctx = BKITParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.stmt_assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.stmt_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.stmt_return()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_stmt_assign




    def stmt_assign(self):

        localctx = BKITParser.Stmt_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(BKITParser.ID)
            self.state = 106
            self.match(BKITParser.EQ)
            self.state = 107
            self.exp(0)
            self.state = 108
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_stmt_call




    def stmt_call(self):

        localctx = BKITParser.Stmt_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(BKITParser.ID)
            self.state = 111
            self.match(BKITParser.LP)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.INTLIT) | (1 << BKITParser.FLOATLIT) | (1 << BKITParser.LP))) != 0):
                self.state = 112
                self.exp(0)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.CM:
                    self.state = 113
                    self.match(BKITParser.CM)
                    self.state = 114
                    self.exp(0)
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_returnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BKITParser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_stmt_return




    def stmt_return(self):

        localctx = BKITParser.Stmt_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmt_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(BKITParser.RETURN)
            self.state = 128
            self.exp(0)
            self.state = 129
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.OperandsContext)
            else:
                return self.getTypedRuleContext(BKITParser.OperandsContext,i)


        def SUB(self):
            return self.getToken(BKITParser.SUB, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def MUL(self):
            return self.getToken(BKITParser.MUL, 0)

        def DIV(self):
            return self.getToken(BKITParser.DIV, 0)

        def ADD(self):
            return self.getToken(BKITParser.ADD, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_exp



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_exp, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 132
                self.operands()
                pass

            elif la_ == 2:
                self.state = 133
                self.operands()
                self.state = 134
                self.match(BKITParser.SUB)
                self.state = 135
                self.operands()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 147
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 145
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = BKITParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 139
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 140
                        _la = self._input.LA(1)
                        if not(_la==BKITParser.MUL or _la==BKITParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 141
                        self.exp(4)
                        pass

                    elif la_ == 2:
                        localctx = BKITParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 142
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 143
                        self.match(BKITParser.ADD)
                        self.state = 144
                        self.exp(1)
                        pass

             
                self.state = 149
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def stmt_call(self):
            return self.getTypedRuleContext(BKITParser.Stmt_callContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def subexp(self):
            return self.getTypedRuleContext(BKITParser.SubexpContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_operands




    def operands(self):

        localctx = BKITParser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_operands)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(BKITParser.INTLIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(BKITParser.FLOATLIT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.stmt_call()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(BKITParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 154
                self.subexp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_subexp




    def subexp(self):

        localctx = BKITParser.SubexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_subexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(BKITParser.LP)
            self.state = 158
            self.exp(0)
            self.state = 159
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[14] = self.exp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def exp_sempred(self, localctx:ExpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 1)
         




